--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -8,6 +8,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="이규행입니다."/>
+        android:text="OOO입니다."/>
 
 </LinearLayout>
